Fix genealogyj for current jdk